--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="src/assets/grey.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+     <meta name="description" content="hamhib coder is a well known service based software company at peshawar. which provided the service in different it field">
+    <meta name="keyword" content="hamhib hamhib-coder hamhib-coder hamhibcoder hamza hiba hamza Ejaz hiba nawaz hamhibcoders hamhib-coders">
     <title class="text-pink-500">HamHib  Coders</title>
   </head>
   <body class="bg-gray-100">
@@ -11,4 +13,3 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
-<!-- <h1><span className='text-4xl font-bold text-pink-600'>H</span><span>am</span><span className='text-4xl font-bold text-pink-600'>H</span><span>ib</span> <span>Coders</span></h1> -->
